--- a/back/pom.xml
+++ b/back/pom.xml
@@ -165,6 +165,12 @@
 			<version>20240303</version>
 		</dependency>
 
+		<!--	비동기 Reactor	-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
